--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "extern-constantify",
   "version": "0.1.0",
-  "description": "transform for browserify, which allows to require files with globbing expressions",
+  "description": "a transform for browserify, which allows the replacement of (undeclared/implicit) CONSTANTS with values based on an external configuration",
   "main": "index.js",
   "scripts": {
     "test": "echo 'Error: no tests written yet' && exit 1"
